[package]
name = "servidor-mqtt-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
mqttrs = "0.4.1"
serde = {version ="1.0.188",features = ["derive"]}
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
